adf test function

--- a/Subsidization_Participation_Bivariate_Analysis.ipynb
+++ b/Subsidization_Participation_Bivariate_Analysis.ipynb
@@ -211,6 +211,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adftest(df):\n",
+    "    output = {}\n",
+    "    output['network'] = df\n",
+    "    for col in df:        \n",
+    "        adf = adfuller(df[col])\n",
+    "        output = pd.Series(adf[0:2], index=['test_statistic','p_value'])\n",
+    "        for key,value in adf[4].items():\n",
+    "            output['critical_value (%s)'%key] = value\n",
+    "        if output['test_statistic'] <= output['critical_value (5%)'] and output['p_value'] <= 0.05:\n",
+    "            output['Null Hypothesis'] = 'Reject'\n",
+    "        else:\n",
+    "            output['Null Hypothesis'] = 'Accept'\n",
+    "        output['column'] = col\n",
+    "        return output\n",
+    "\n",
+    "def auto_corr(df):\n",
+    "    for col in df:\n",
+    "        col.autocorr(lag=5)\n",
+    "\n",
+    "def acf_plot(self):\n",
+    "    for col in df:\n",
+    "        plot_acf(df[col], lags=20, label=[col])\n",
+    "        plt.legend()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
