--- a/nc_node_behavior/nucypher_node_behavior.ipynb
+++ b/nc_node_behavior/nucypher_node_behavior.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "First we retrieve relevant dispatcher events using Dune. Check out the SQL queries here: \n",
     "- Worker **Commitments** https://dune.xyz/queries/48938\n",
-    "This pulls, on each period, each (staker) address – whose correspondng worker successfully committed to the next period. \n",
+    "This pulls, on each period, each (staker) address – whose corresponding worker successfully committed to the next period. \n",
     "- Staker **Locks** https://dune.xyz/queries/54332\n",
     "This pulls, on each period, any token locking event by a staker and the sum of tokens locked.\n",
     "- Staker **Withdrawals** https://dune.xyz/queries/54339\n",
@@ -299,30 +299,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d3d48b",
+   "id": "5e08fc78",
    "metadata": {},
    "source": [
     "In order to elucidate the factors which affect the number of independent nodes in the NuCypher network, we will examine the relationship between this time series (Active Nodes) and the _break-even stake size_ over the same 6 months. First, we derive an expression for this:\n",
     "\n",
+    "$$ Stake_{breakeven} = \\frac{S_{committed}}{R_{total} * NU_{USD}} * [(G_{commit} * G_{price} * ETH_{USD}) + C_{fixed}]$$\n",
     "\n",
-    "$$ Stake_{breakeven} = \\frac{[(G_{commit} * G_{price} * ETH_{USD}) + C_{fixed}] * S_{committed}}{R_{total} * NU_{USD}} $$\n",
     "\n",
-    "\n",
-    "Where the invariants and are:\n",
+    "Where the invariants are:\n",
     "\n",
     "- $G_{commit}$ \n",
-    "Gas spent on period-to-period check-ins ~ 200,000 GWEI \n",
+    "Gas spent on period-to-period commitments \n",
     "\n",
     "- $C_{fixed}$ \n",
-    "Fixed costs of node operation, such as server costs ~ $3/day\n",
+    "Fixed costs of node operation, such as server costs\n",
     "\n",
     "- $R_{total}$\n",
-    "The total number of tokens distributed per period to all active stakers = 1,002,509.48 \n",
+    "The total number of tokens distributed per period to all active stakers\n",
     "\n",
     "The time-sensitive variables are:\n",
     "\n",
     "- $G_{price}$\n",
-    "The average gas price on a given date\n",
+    "The average gas price\n",
     "\n",
     "- $ETH_{USD}$ \n",
     "The ETH:USD exchange rate\n",
@@ -331,7 +330,12 @@
     "The NU:USD exchange rate\n",
     "\n",
     "-  $S_{committed}$\n",
-    "The aggregate of all stakes whose corresponding workers commits in a given period. Note that this does not eqaul the total 'staked' in a given period, as a staker can have collateral locked but fail to commit to the next period, thereby forgoing the reward for that period. This aggregate value has a big impact on the _fraction_ of $R_{total}$ a stake will receieve. \n",
+    "The aggregate of all stakes whose corresponding workers commit in a given period \n",
+    "\n",
+    "\n",
+    "Note that this does not eqaul the total 'staked' in a given period, as a staker can have collateral locked but fail to commit to the next period, thereby forgoing the reward for that period. \n",
+    "\n",
+    "This aggregate value has a big impact on the _fraction_ of $R_{total}$ a stake will receieve. \n",
     "\n",
     "Note that $S_{committed}$ is not particularly easy to calculate using on-chain data – see note above about Locks and Withdrawals. \n",
     "\n",
@@ -371,7 +375,9 @@
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
     "#plt.yscale('log')\n",
-    "plt.grid(b=True, which='major', color='#999999', linestyle='-')"
+    "plt.grid(b=True, which='major', color='#999999', linestyle='-')\n",
+    "\n",
+    "#(1,002,509.48)"
    ]
   }
  ],
