--- a/nc_node_behavior/nucypher_node_behavior.ipynb
+++ b/nc_node_behavior/nucypher_node_behavior.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "64d73562",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,357 @@
     "fig_size = plt.rcParams[\"figure.figsize\"]\n",
     "fig_size[0] = 14\n",
     "fig_size[1] = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d7a04457",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Committed_Stake</th>\n",
+       "      <th>Active_workers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-04-14</td>\n",
+       "      <td>549441217.0</td>\n",
+       "      <td>797.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-04-15</td>\n",
+       "      <td>536452325.0</td>\n",
+       "      <td>1528.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-04-22</td>\n",
+       "      <td>549413362.0</td>\n",
+       "      <td>1673.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-04-29</td>\n",
+       "      <td>534321428.0</td>\n",
+       "      <td>1646.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-05-06</td>\n",
+       "      <td>580197808.0</td>\n",
+       "      <td>1589.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021-05-13</td>\n",
+       "      <td>596432863.0</td>\n",
+       "      <td>1821.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>591365160.0</td>\n",
+       "      <td>1710.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2021-05-27</td>\n",
+       "      <td>594778231.0</td>\n",
+       "      <td>1680.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021-06-03</td>\n",
+       "      <td>596796944.0</td>\n",
+       "      <td>1552.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2021-06-10</td>\n",
+       "      <td>603373343.0</td>\n",
+       "      <td>1469.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021-06-17</td>\n",
+       "      <td>609837953.0</td>\n",
+       "      <td>1402.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021-06-24</td>\n",
+       "      <td>595251292.0</td>\n",
+       "      <td>1182.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>615169946.0</td>\n",
+       "      <td>1159.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>612806227.0</td>\n",
+       "      <td>607.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2021-07-15</td>\n",
+       "      <td>621373767.0</td>\n",
+       "      <td>589.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2021-07-22</td>\n",
+       "      <td>619581937.0</td>\n",
+       "      <td>549.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2021-07-29</td>\n",
+       "      <td>612190006.0</td>\n",
+       "      <td>540.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>628618658.0</td>\n",
+       "      <td>501.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2021-08-12</td>\n",
+       "      <td>627914645.0</td>\n",
+       "      <td>434.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2021-08-19</td>\n",
+       "      <td>428667537.0</td>\n",
+       "      <td>430.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2021-08-26</td>\n",
+       "      <td>646557584.0</td>\n",
+       "      <td>336.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2021-09-02</td>\n",
+       "      <td>613808199.0</td>\n",
+       "      <td>266.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2021-09-09</td>\n",
+       "      <td>659738204.0</td>\n",
+       "      <td>376.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2021-09-16</td>\n",
+       "      <td>659580648.0</td>\n",
+       "      <td>369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2021-09-23</td>\n",
+       "      <td>665721261.0</td>\n",
+       "      <td>375.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2021-09-30</td>\n",
+       "      <td>662157393.0</td>\n",
+       "      <td>358.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2021-10-07</td>\n",
+       "      <td>669882516.0</td>\n",
+       "      <td>326.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2021-10-14</td>\n",
+       "      <td>645850932.0</td>\n",
+       "      <td>323.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2021-10-21</td>\n",
+       "      <td>646308012.0</td>\n",
+       "      <td>255.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2021-10-28</td>\n",
+       "      <td>632300113.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2021-11-04</td>\n",
+       "      <td>595723685.0</td>\n",
+       "      <td>192.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Timestamp  Committed_Stake  Active_workers\n",
+       "0   2021-04-14      549441217.0           797.0\n",
+       "1   2021-04-15      536452325.0          1528.0\n",
+       "2   2021-04-22      549413362.0          1673.0\n",
+       "3   2021-04-29      534321428.0          1646.0\n",
+       "4   2021-05-06      580197808.0          1589.0\n",
+       "5   2021-05-13      596432863.0          1821.0\n",
+       "6   2021-05-20      591365160.0          1710.0\n",
+       "7   2021-05-27      594778231.0          1680.0\n",
+       "8   2021-06-03      596796944.0          1552.0\n",
+       "9   2021-06-10      603373343.0          1469.0\n",
+       "10  2021-06-17      609837953.0          1402.0\n",
+       "11  2021-06-24      595251292.0          1182.0\n",
+       "12  2021-07-01      615169946.0          1159.0\n",
+       "13  2021-07-08      612806227.0           607.0\n",
+       "14  2021-07-15      621373767.0           589.0\n",
+       "15  2021-07-22      619581937.0           549.0\n",
+       "16  2021-07-29      612190006.0           540.0\n",
+       "17  2021-08-05      628618658.0           501.0\n",
+       "18  2021-08-12      627914645.0           434.0\n",
+       "19  2021-08-19      428667537.0           430.0\n",
+       "20  2021-08-26      646557584.0           336.0\n",
+       "21  2021-09-02      613808199.0           266.0\n",
+       "22  2021-09-09      659738204.0           376.0\n",
+       "23  2021-09-16      659580648.0           369.0\n",
+       "24  2021-09-23      665721261.0           375.0\n",
+       "25  2021-09-30      662157393.0           358.0\n",
+       "26  2021-10-07      669882516.0           326.0\n",
+       "27  2021-10-14      645850932.0           323.0\n",
+       "28  2021-10-21      646308012.0           255.0\n",
+       "29  2021-10-28      632300113.0           168.0\n",
+       "30  2021-11-04      595723685.0           192.0\n",
+       "31         NaT              NaN             NaN\n",
+       "32         NaT              NaN             NaN\n",
+       "33         NaT              NaN             NaN\n",
+       "34         NaT              NaN             NaN\n",
+       "35         NaT              NaN             NaN\n",
+       "36         NaT              NaN             NaN\n",
+       "37         NaT              NaN             NaN\n",
+       "38         NaT              NaN             NaN\n",
+       "39         NaT              NaN             NaN\n",
+       "40         NaT              NaN             NaN\n",
+       "41         NaT              NaN             NaN"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cs = pd.read_csv(r'committed_stake_7dayperiods.csv', usecols=[\"Date\", \"Committed_Stake\"])\n",
+    "df_aw = pd.read_csv(r'active_workers_7dayperiods.csv')\n",
+    "df_cs['Date'] = pd.to_datetime(df_cs['Date'])\n",
+    "df_cs['Date'] = df_cs['Date'].dt.date\n",
+    "df_cs.rename(columns = {'Date':'Timestamp'}, inplace = True)\n",
+    "df_aw['Timestamp'] = pd.to_datetime(df_aw['Timestamp'])\n",
+    "df_aw['Timestamp'] = df_aw['Timestamp'].dt.date\n",
+    "df_cw = pd.merge(df_cs, df_aw, how='left', on=['Timestamp'])\n"
    ]
   },
   {
